# checkret

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: publish.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-binaries.yml
src/checkret/: __init__.py  plots.py  reports.py  stats.py
src/katsustats/: __init__.py  __main__.py  _dataframe.py  plots.py  reports.py  stats.py
tests/: conftest.py  test_cli.py  test_plots.py  test_reports.py  test_stats.py
