[project]
name = "katsustats"
dynamic = ["version"]
description = "A modernized backtest report module powered by Polars"
readme = "README.md"
authors = [
    { name = "katsu1110", email = "code1110g-show@hotmail.co.jp" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.hatch.version]
path = "src/katsustats/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
